--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "node scripts/dev.js"
+    "dev": "node scripts/dev.js reactivity -f esm"
   },
   "keywords": [],
   "author": "2100",
